--- a/projekt z filipem.css
+++ b/projekt z filipem.css
@@ -261,7 +261,7 @@ section.active {
 ===================== */
 footer {
     background: #0d1117;
-    color: #ddd;
+    color: black;
     padding: 35px;
     text-align: center;
     margin-top: 40px;
