--- a/projekt z filipem.css
+++ b/projekt z filipem.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -246,9 +245,6 @@ section.active {
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
 }
 
-/* =====================
-         MAPA
-===================== */
 .map-container iframe {
     width: 100%;
     height: 360px;
@@ -256,9 +252,6 @@ section.active {
     box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
 }
 
-/* =====================
-        FOOTER
-===================== */
 footer {
     background: #0d1117;
     color: black;
@@ -270,16 +263,49 @@ footer {
 }
 
 footer a:hover {
-    color: #007bff !important;
+    color: #007bff;
 }
 
 footer .list-unstyled li {
     margin-bottom: 0.5rem;
 }
 
-/* =====================
-     RESPONSYWNOŚĆ
-===================== */
+.email {
+    text-align: center;
+    font-weight: bold;
+    padding: 20px;
+}
+
+
+.email-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;                 
+    margin-top: 10px;
+}
+
+.email-row input[type="text"] {
+    width: 250px;
+    padding: 8px;
+    border-radius: 8px;
+    border: 1px solid #aaa;
+}
+
+.email-row input[type="submit"] {
+    background-color: #0d6efd;
+    color: white;
+    padding: 8px 15px;
+    font-size: 0.9rem;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.email-row input[type="submit"]:hover {
+    background-color: #084298;
+}
+
 @media (max-width: 992px) {
     .content-layout {
         flex-direction: column;
